...

import 'package:collectors_center/Presenter/cuentas.dart';
import 'package:flutter/material.dart';
import 'package:collectors_center/View/recursos/colors.dart';

class Ingresar extends StatefulWidget {
  const Ingresar({super.key});

  @override
  State<Ingresar> createState() => _IngresarState();
}

class _IngresarState extends State<Ingresar> {
...
            buildInputField(
                'Correo Electrónico',
                _emailController,
                false,
                TextInputType.emailAddress,
                screenWidth,
                const Key('email')),
            const SizedBox(
              height: 15,
            ),
            Padding(
              padding: const EdgeInsets.symmetric(horizontal: 25),
              child: Padding(
                padding: const EdgeInsets.only(left: 10),
                child: TextField(
                  key: const Key('password'),
                  controller: _passwordController,
                  obscureText: !_passwordVisible,
                  keyboardType: TextInputType.text,
                  decoration: InputDecoration(
                    suffixIcon: IconButton(
                      color: _passwordVisible
...
                    decoration: BoxDecoration(
                        color: brown,
                        borderRadius: BorderRadius.circular(12),
                        border: Border.all(color: Colors.white, width: 2)),
                    child: Center(
                        child: Text(
                      'Regresar',
                      style: TextStyle(
                        color: myColor,
                        fontWeight: FontWeight.bold,
                        fontSize: 20,
                      ),
                    )),
...
