...
            TextButton(
              key: const Key('confirm'),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: Text(
                'Eliminar',
                style: TextStyle(color: red),
              ),
            ),
          ],
        );
      },
...
                      height: 20,
                    ),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.spaceBetween,
                      children: [
                        IconButton(
                          key: const Key('DeleteIcon'),
                          onPressed: () {
                            if (deleteActivated) {
                              setState(() {
                                deleteActivated = !deleteActivated;
                              });
                              if (_selectedObjects.isNotEmpty) {
...
                                ? Icons.check_circle_outlined
                                : Icons.delete,
                            size: 60,
                          ),
                        ),
                        IconButton(
                          key: const Key('AddIcon'),
                          onPressed: () {
                            Navigator.push(
                                context,
                                MaterialPageRoute(
                                    builder: ((context) =>
                                        AgregarObjectsCategoria(
...
